--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
-  <title>My HTML Site
-  </title>
+  <head>
+  <title>My HTML Site </title>
+    </head>
   <body>
 Hello. I really want to code!
     </body>
