--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     </head>
   <body>
     <h1> About Me</h1>
-Hello. I really want to code!
+Hello. I really want to code!This is my Github profile picture.
+    <img src="https://avatars2.githubusercontent.com/u/66532218?v=4">
     </body>
 
 </html>
