--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <h1> About Me</h1>
 Hello. I really want to code!This is my Github profile picture.
     <img src="https://avatars2.githubusercontent.com/u/66532218?v=4">
+    <ol>
+      <li>Scratch</li>
+      <li>Github</li>
+      <li>Google Sites</li>
+      </ol>
     </body>
 
 </html>
