--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 Hello. I really want to code!This is my Github profile picture.
     <img src="https://avatars2.githubusercontent.com/u/66532218?v=4">
     <ol>
-      <li>Scratch</li>
-      <li>Github</li>
-      <li>Google Sites</li>
+      <li><a href="https//:Scratch.com">Scratch</a></li>
+      <li><a href="https//:Github.com">Github</a></li>
+      <li><a href="https://sites.google.com/new">Google Sites</a></li>
       </ol>
     </body>
 
